# sharkoon-light2-200

./: .gitignore  Makefile  README.md  hid-sharkoon-light2-200.c  readme.md
daemon/: Light2Settings.py  TestSettings.py
driver/: Makefile  hid-sharkoon-light2-200.c  hid-sharkoon-light2-200.h  test.py  usb_dev_details.txt
driver/scripts/: heartBeat.py  ledOff.py  requestSettings.py
light2ui/: CMakeLists.txt  main.cpp
misc/reverse_engineering/: startup.txt
misc/reverse_engineering/effects/: Multi_Color_Marquee.txt  Permanent01.txt  Permanent02.txt  Pulsating_Brightness01.txt  Pulsating_Brightness03.txt  Pulsating_Brightness05.txt  Single_Color_Marquee.txt  Trigger.txt
misc/reverse_engineering/wireshark/: DPI-Settings.pcapng  Heartbeat.pcapng  Permanent_Color_0_255_0.pcapng  ProfileSwitching.pcapng  Pulsating_RGB_Cycle.pcapng  reset settings profile 2.pcapng  reset settings.pcapng  startup_application.pcapng
reverse_engineering/: readme.md
reverse_engineering/effects/: ColorChange01.txt  Heartbeat.txt  LED_off.txt  Lift-Off_Distance.txt  Pulsating_Brightness02.txt  Pulsating_Brightness04.txt  Pulsating_RGB_Cycle.txt  RippleEffect.txt
reverse_engineering/wireshark/: LedOff.pcapng  Pulsating_Color_0_0_255.pcapng  dpi step switch by mouse dpi key.pcapng
scripts/: get_mouse_settings.py  get_mouse_settings_threaded.py  pyusb_test.py  set_heartbeat_red.py  set_led_off.py
